# advanced_python_course

homework1/: README.md
homework1/artifacts/: nl_file.txt  nl_stdin.txt  tail_many_files.txt  tail_one_file.txt  tail_stdin.txt  wc_many_files.txt  wc_one_file.txt  wc_stdin.txt
homework1/scripts/: nl.py  tail.py  wc.py
homework1/test_files/: file1.txt  file2.txt  file3.txt
homework2/: README.md  requirements.txt
homework2/artifacts/: 2_1.tex  2_2.tex  2_2_link.txt
homework2/package/: pyproject.toml
homework2/package/src/small_latex_module_mmmmarryyy/: module_file.py
homework2/package/src/small_latex_module_mmmmarryyy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
homework2/src/: Dockerfile  docker-compose.yaml  generate_file1.py  generate_file2.py  generate_table.py
homework3/: README.md
homework3/artifacts/3_2/: matrix%.txt  matrix*.txt  matrix+.txt  matrix-.txt  matrix_div.txt
homework3/artifacts/3_3/: AB.txt  CD.txt  hash.txt
homework3/scripts/: task1.py  task2.py  task3.py
homework4/: README.md
homework4/artifacts/: 4_1.txt  4_2.txt  4_3.txt
homework4/src/: task1.py  task2.py  task3.py
homework5/: README.md
homework5/artifacts/5_1/: console.txt
homework5/src/: task1.py
